update conda metayaml to support odbc for snowflake

--- a/conda/recipes/blazingsql/meta.yaml
+++ b/conda/recipes/blazingsql/meta.yaml
@@ -38,6 +38,7 @@ requirements:
         - cudf {{ minor_version }}.*
         - ucx-py {{ minor_version }}.*
         - ucx-proc=*=gpu
+        - unixodbc
         - dlpack
         - cudatoolkit {{ cuda_version }}.*
     run:
