--- a/engine/tests/cache_machine/CMakeLists.txt
+++ b/engine/tests/cache_machine/CMakeLists.txt
@@ -1,10 +1,15 @@
-set(cache_test_sources
-        cache_test.cpp
-)
-configure_test(cache_test "${cache_test_sources}")
+# set(cache_test_sources
+#         cache_test.cpp
+# )
+# configure_test(cache_test "${cache_test_sources}")
 
-set(exception_handling_test_sources
-        ../utilities/MemoryConsumer.cu
-        exception_handling_test.cpp
+set(cachedata_test_sources
+        cachedata_test.cpp
 )
-configure_test(exception_handling_test "${exception_handling_test_sources}")
+configure_test(cachedata_test "${cachedata_test_sources}")
+
+# set(exception_handling_test_sources
+#         ../utilities/MemoryConsumer.cu
+#         exception_handling_test.cpp
+# )
+# configure_test(exception_handling_test "${exception_handling_test_sources}")
