migrate host_table::get_arrow

--- a/engine/tests/CMakeLists.txt
+++ b/engine/tests/CMakeLists.txt
@@ -93,4 +93,5 @@ message(STATUS "******** Configuring tests ********")
 # add_subdirectory(kernel_tests)
 # add_subdirectory(provider)
 # add_subdirectory(logic_controllers)
+add_subdirectory(host-table)
 message(STATUS "******** Tests are ready ********")
