--- a/conda/recipes/blazingsql/meta.yaml
+++ b/conda/recipes/blazingsql/meta.yaml
@@ -20,7 +20,7 @@ build:
 
 requirements:
     build:
-        - cmake 3.18.4
+        - cmake >=3.18
         - ninja
         - gtest 1.10
         - aws-sdk-cpp
