[VDE-44] add from arrow test

--- a/engine/tests/host-table/CMakeLists.txt
+++ b/engine/tests/host-table/CMakeLists.txt
@@ -1,3 +1,5 @@
-set (test-sources to-arrow.cpp)
+set (to-arrow-test-sources to-arrow.cpp)
+configure_test (to-arrow-test "${to-arrow-test-sources}")
 
-configure_test (to-arrow-test "${test-sources}")
+set (from-arrow-test-sources from-arrow.cpp)
+configure_test (from-arrow-test "${from-arrow-test-sources}")
