--- a/conda/recipes/blazingsql/meta.yaml
+++ b/conda/recipes/blazingsql/meta.yaml
@@ -36,7 +36,7 @@ requirements:
         - openjdk >=8.0, <9.0
         - maven
         - cudf {{ minor_version }}.*
-        - ucx-py {{ minor_version }}.*
+        - ucx-py 0.20.*
         - ucx-proc=*=gpu
         - unixodbc
         - boost-cpp 1.76.0
@@ -56,7 +56,7 @@ requirements:
         - {{ pin_compatible('zeromq', max_pin='x.x.x') }}
         - dask-cudf {{ minor_version }}.*
         - dask-cuda {{ minor_version }}.*
-        - ucx-py {{ minor_version }}.*
+        - ucx-py 0.20.*
         - ucx-proc=*=gpu
         - unixodbc
         - {{ pin_compatible('cudatoolkit', max_pin='x.x') }}
