add support to arrow and pandas in config to E2E tests

--- a/tests/BlazingSQLTest/Configuration/config_multinode.yaml
+++ b/tests/BlazingSQLTest/Configuration/config_multinode.yaml
@@ -8,6 +8,8 @@ TEST_SETTINGS:
 
 RUN_SETTINGS:
 #  SAVE_LOG: "false" - Not yet supported in yaml.
+  OUTPUT_TYPE: cudf #pandas, cudf
+  PREFERRED_COMPUTE: cudf #arrow, cudf
   EXEC_MODE: gpuci #gpuci, full, generator
   NGPUS: 1
   NETWORK_INTERFACE: lo
