--- a/engine/tests/CMakeLists.txt
+++ b/engine/tests/CMakeLists.txt
@@ -90,7 +90,7 @@ add_subdirectory(cache_machine)
 # add_subdirectory(sort)
 # add_subdirectory(communication)
 # add_subdirectory(waiting_queue)
-# add_subdirectory(kernel_tests)
+add_subdirectory(kernel_tests)
 # add_subdirectory(provider)
 # add_subdirectory(logic_controllers)
 add_subdirectory(host-table)
