--- a/engine/tests/CMakeLists.txt
+++ b/engine/tests/CMakeLists.txt
@@ -83,7 +83,7 @@ enable_testing()
 # -------------------
 message(STATUS "******** Configuring tests ********")
 # add_subdirectory(allocation_pool)
-add_subdirectory(cache_machine)
+#add_subdirectory(cache_machine)
 # add_subdirectory(logical-groupby)
 # add_subdirectory(new-tests)
 # add_subdirectory(parser)
@@ -94,5 +94,5 @@ add_subdirectory(cache_machine)
 add_subdirectory(kernel_tests)
 # add_subdirectory(provider)
 # add_subdirectory(logic_controllers)
-add_subdirectory(host-table)
+#add_subdirectory(host-table)
 message(STATUS "******** Tests are ready ********")
