To build arrow v4 without any of cudf

--- a/io/CMakeLists.txt
+++ b/io/CMakeLists.txt
@@ -80,12 +80,13 @@ message(STATUS "ARROW: ARROW_INCLUDE_DIR set to ${ARROW_INCLUDE_DIR}")
 message(STATUS "ARROW: ARROW_LIB set to ${ARROW_LIB}")
 message(STATUS "ARROW: ARROW_CUDA_LIB set to ${ARROW_CUDA_LIB}")
 add_library(arrow SHARED IMPORTED ${ARROW_LIB})
-add_library(arrow_cuda SHARED IMPORTED ${ARROW_CUDA_LIB})
+# TODOL ARROW_CUDA_LIB
+#add_library(arrow_cuda SHARED IMPORTED ${ARROW_CUDA_LIB})
 
-if(ARROW_INCLUDE_DIR AND ARROW_LIB AND ARROW_CUDA_LIB)
+if(ARROW_INCLUDE_DIR AND ARROW_LIB) # AND ARROW_CUDA_LIB
   set_target_properties(arrow PROPERTIES IMPORTED_LOCATION ${ARROW_LIB})
-  set_target_properties(arrow_cuda PROPERTIES IMPORTED_LOCATION ${ARROW_CUDA_LIB})
-endif(ARROW_INCLUDE_DIR AND ARROW_LIB AND ARROW_CUDA_LIB)
+  # set_target_properties(arrow_cuda PROPERTIES IMPORTED_LOCATION ${ARROW_CUDA_LIB})
+endif(ARROW_INCLUDE_DIR AND ARROW_LIB) #  AND ARROW_CUDA_LIB
 # END find arrow
 
 set(FILESYSTEM_SRC_FILES
