arrow cpu only ready

--- a/engine/tests/CMakeLists.txt
+++ b/engine/tests/CMakeLists.txt
@@ -87,7 +87,10 @@ message(STATUS "******** Configuring tests ********")
 # add_subdirectory(logical-groupby)
 # add_subdirectory(new-tests)
 # add_subdirectory(parser)
-add_subdirectory(skipdata)
+
+if(CUDF_SUPPORT)
+    add_subdirectory(skipdata)
+endif()
 # add_subdirectory(sort)
 # add_subdirectory(communication)
 # add_subdirectory(waiting_queue)
