Add README using ARROW only

--- a/io/CMakeLists.txt
+++ b/io/CMakeLists.txt
@@ -83,10 +83,12 @@ add_library(arrow SHARED IMPORTED ${ARROW_LIB})
 # TODOL ARROW_CUDA_LIB
 #add_library(arrow_cuda SHARED IMPORTED ${ARROW_CUDA_LIB})
 
-if(ARROW_INCLUDE_DIR AND ARROW_LIB) # AND ARROW_CUDA_LIB
+if (ARROW_INCLUDE_DIR AND ARROW_LIB AND NOT ARROW_CUDA_LIB)
+    set_target_properties(arrow PROPERTIES IMPORTED_LOCATION ${ARROW_LIB})
+elseif(ARROW_INCLUDE_DIR AND ARROW_LIB AND ARROW_CUDA_LIB)
   set_target_properties(arrow PROPERTIES IMPORTED_LOCATION ${ARROW_LIB})
-  # set_target_properties(arrow_cuda PROPERTIES IMPORTED_LOCATION ${ARROW_CUDA_LIB})
-endif(ARROW_INCLUDE_DIR AND ARROW_LIB) #  AND ARROW_CUDA_LIB
+  set_target_properties(arrow_cuda PROPERTIES IMPORTED_LOCATION ${ARROW_CUDA_LIB})
+endif()
 # END find arrow
 
 set(FILESYSTEM_SRC_FILES
